tests/negative/duplicate_main.far
fun main() { return 0 }
fun main() { return 1 }
